--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "eslint": "npx eslint src/**/*.{js,astro} --fix"
   },
   "dependencies": {
+    "@astrojs/react": "^3.0.8",
     "@astrojs/tailwind": "^5.0.3",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
     "astro": "^4.0.6",
-    "astro-icon": "^0.8.2",
     "flowbite": "^2.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.6"
   },
   "devDependencies": {
