--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@astrojs/tailwind": "^5.0.3",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "animate.css": "^4.1.1",
     "astro": "^4.0.6",
     "flowbite": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "tailwindcss": "^3.3.6"
   },
   "devDependencies": {
