--- a/package.json
+++ b/package.json
@@ -13,15 +13,21 @@
   "dependencies": {
     "@astrojs/react": "^3.0.8",
     "@astrojs/tailwind": "^5.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "animate.css": "^4.1.1",
     "astro": "^4.0.6",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "flowbite": "^2.2.1",
+    "lucide-react": "^0.307.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "tailwindcss": "^3.3.6"
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss": "^3.3.6",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^6.14.0",
