--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,11 @@
 {
   "editor.fontSize": 14,
-  "prettier.bracketSameLine": true,
+  "prettier.bracketSameLine": false,
   "prettier.printWidth": 120,
   "prettier.jsxSingleQuote": true,
-  "prettier.singleQuote": true,
+  "prettier.singleQuote": false,
   "prettier.singleAttributePerLine": true,
   "prettier.tabWidth": 2,
-  "prettier.useTabs": false
+  "prettier.useTabs": false,
+  "prettier.bracketSpacing": true
 }
