--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^6.14.0",
+    "daisyui": "^4.6.0",
     "eslint": "^8.56.0",
     "eslint-plugin-astro": "^0.31.0",
     "postcss-html": "^1.5.0",
