--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@astrojs/react": "^3.0.8",
+    "@astrojs/sitemap": "^3.0.5",
     "@astrojs/tailwind": "^5.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/react": "^18.2.45",
